--- a/c1541/c1541.vcxproj.filters
+++ b/c1541/c1541.vcxproj.filters
@@ -516,4 +516,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitignore" />
+    <None Include="..\README.md" />
+  </ItemGroup>
 </Project>
