Adding "-interleave <sector step>" command
Testing in Vice x64sc shows "-interleave 1" is much faster than "-interleave 10" when using IRQDisk in two-bit transfer mode.

--- a/c1541/c1541.vcxproj
+++ b/c1541/c1541.vcxproj
@@ -192,6 +192,10 @@
     <None Include="..\.gitignore" />
     <None Include="..\README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Done.txt" />
+    <Text Include="TODO.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{5F778E5B-7374-4211-805A-E882713B281D}</ProjectGuid>
